# microservice-demo

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml
account/: .env.example  Cargo.toml  Dockerfile
account/src/: config.rs  db.rs  kafka.rs  main.rs  models.rs  routes.rs  service.rs
account_view/: .env.example  Cargo.toml  Dockerfile
account_view/migrations/2022-05-29-173124_add_account/: up.sql
account_view/src/: config.rs  db.rs  kafka.rs  main.rs  models.rs  routes.rs  schema.rs  service.rs
authentication/: .env.example  Cargo.toml  Dockerfile
authentication/src/: config.rs  main.rs  routes.rs  service.rs
gateway/: .env.example  Cargo.toml  Dockerfile
gateway/src/: config.rs  main.rs  routes.rs  schema.rs  service.rs
gateway/src/config/: config.rs
