[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.16"
actix-cors = "0.6"

dotenv = "0.15.0"
envconfig = "0.10.0"

juniper = "0.15"

tokio = { version = "1", features = ["full"] }

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"

chrono = { version = "0.4.10", features = ["serde"] } # Used for setting DateTimes

reqwest = { version = "0.11", features = ["json"] }